--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,7 +1,7 @@
 {
   "ep_align.align" : "Alignement",
-  "ep_align.left" : "Gauche",
-  "ep_align.middle" : "Milieu",
-  "ep_align.right" : "Droit",
-  "ep_align.justify" : "Justifié"
+  "ep_align.toolbar.left.title" : "Gauche",
+  "ep_align.toolbar.middle.title" : "Milieu",
+  "ep_align.toolbar.right.title" : "Droit",
+  "ep_align.toolbar.justify.title" : "Justifié"
 }
