--- a/locales/pl.json
+++ b/locales/pl.json
@@ -1,7 +1,7 @@
 {
   "ep_align.align" : "Wyrównanie",
-  "ep_align.left" : "Do lewej",
-  "ep_align.middle" : "Do środka",
-  "ep_align.right" : "Do prawej",
-  "ep_align.justify" : "Justowanie"
+  "ep_align.toolbar.left.title" : "Do lewej",
+  "ep_align.toolbar.middle.title" : "Do środka",
+  "ep_align.toolbar.right.title" : "Do prawej",
+  "ep_align.toolbar.justify.title" : "Justowanie"
 }
